--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,45 @@ body {
   background-color: #111;
   color: #ff4500;
 }
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  padding: 1.5rem 0;
+}
+
+.markdown {
+  border-right: 3px solid #999;
+  height: calc(50vh - 1px);
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.textarea {
+  background-color: transparent;
+  color: #fff;
+  font-size: 1rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  width: 100%;
+  height: calc(50vh - 1px);
+}
+
+.preview {
+  padding: 1rem;
+}
+
+@media (min-width: 1024px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .markdown {
+    height: 100vh;
+    margin-bottom: 0;
+  }
+
+  .textarea {
+    height: 100vh;
+  }
+}
